# popgen-genotyping

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  README.md  TESTING.md  pipeline_dag.mmd  plan.md  pyproject.toml  research.md  ticket.md  workitem.json
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  docker.yaml  get_version.py  lint.yaml  test.yaml
src/popgen_genotyping/: __init__.py  config_template.toml  metamist_utils.py  run_workflow.py  stages.py  utils.py
src/popgen_genotyping/jobs/: PrintPreviousJobOutputInAPythonJob.py  baf_regress_job.py  bafregress_job.py  cohort_bcf_to_plink_job.py  cohort_cluster_stats_job.py  cohort_plink_qc_job.py  export_cohort_datasets_job.py  gtc_to_bcfs_job.py  gtc_to_heavy_vcf_job.py  heavy_to_light_vcf_job.py  king_ibdseg_job.py  merge_cohort_plink_job.py  merge_plink_job.py  merge_with_reference_panel_job.py  plink2_qc_job.py  plink2_to_plink1_job.py  plink_filter_for_king_job.py  qc_report_job.py  snp_qc_report_job.py
src/popgen_genotyping/scripts/: __init__.py  aggregate_cluster_stats.py  generate_synthetic_manifest.py  merge_qc.py  snp_qc_report.py  vcf_to_plink.py
test/: test_aggregate_cluster_stats.py  test_king_ibdseg.py  test_merge_cohort_plink.py  test_merge_qc.py  test_merge_with_reference_panel.py  test_metamist_utils.py  test_plink_filter_for_king.py  test_snp_qc_report.py  test_utils.py  utils.py
test/local/: .gitignore  config_template.toml
test/local/data/: synthetic_manifest.csv
test/scripts/: generate_af_reference.py  generate_synthetic_gtc.py  prepare_data.py  regenerate_bpm_chrom_cache.py  reproduce_bafregress_production.py  reproduce_full_pipeline.py  testing_utils.py
test/scripts/pipeline_stages/: bafregress.py  cohort_bcf_to_plink.py  export_cohort_datasets.py  gtc_to_bcfs.py  king_ibdseg.py
